--- a/Day_1_understanding_programming _logic/notebook/Loops.ipynb
+++ b/Day_1_understanding_programming _logic/notebook/Loops.ipynb
@@ -111,10 +111,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sunday\n",
+      "Monday\n",
+      "Tuesday\n",
+      "Wednesday\n",
+      "Thursday\n",
+      "Friday\n",
+      "Saturday\n"
+     ]
+    }
+   ],
+   "source": [
+    "weekdays = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']\n",
+    "\n",
+    "for day in weekdays:\n",
+    "    print(day)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,11 +146,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "4.0\n",
+      "6.0\n",
+      "8.0\n",
+      "10.0\n"
+     ]
+    }
+   ],
    "source": [
     "elements = [10,20,30,40,50]\n",
+    "\n",
+    "for eachElement in elements:\n",
+    "    print(eachElement/5)\n",
     "\n",
     "# write the code here\n"
    ]
@@ -160,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
