--- a/Day_1_understanding_programming _logic/notebook/Conditions.ipynb
+++ b/Day_1_understanding_programming _logic/notebook/Conditions.ipynb
@@ -80,6 +80,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22 is odd number\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = 22\n",
+    "\n",
+    "if num1^2 == 0:\n",
+    "    print (str(num1) + ' is even number')\n",
+    "    \n",
+    "else:\n",
+    "    print (str(num1) + ' is odd number')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -109,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
