--- a/Day_1_understanding_programming _logic/notebook/Functions.ipynb
+++ b/Day_1_understanding_programming _logic/notebook/Functions.ipynb
@@ -120,6 +120,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(x, y):\n",
+    "    return (x+y)\n",
+    "\n",
+    "add(1, 2)\n",
+    "\n",
+    "\n",
+    "def sub(x, y):\n",
+    "    return(x-y)\n",
+    "    \n",
+    "    sub(x-y)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -142,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
