--- a/Day_1_understanding_programming _logic/notebook/Variables_and_lists.ipynb
+++ b/Day_1_understanding_programming _logic/notebook/Variables_and_lists.ipynb
@@ -109,10 +109,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n",
+      "Forty Five\n"
+     ]
+    }
+   ],
+   "source": [
+    "var_1 = 45\n",
+    "print (var_1)\n",
+    "var_1 = 'Forty Five'\n",
+    "print (var_1)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -159,10 +173,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "weekdays = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -214,10 +230,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mon 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "ListWeekDaysDates = [\n",
+    "            ['Mon','Tue','Wed','Thu','Fri','Sat','Sun'],\n",
+    "            [6,7,8,9,10,11,12]  \n",
+    "        ]\n",
+    "\n",
+    "print (ListWeekDaysDates[0][0], List2[1][0])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -352,6 +383,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wed\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (ListWeekDaysDates[0][2])\n",
+    "print (ListWeekDaysDates[1][2])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -374,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
