--- a/Day_3_spy_games_dataset/notebooks/Spy_games-solution.ipynb
+++ b/Day_3_spy_games_dataset/notebooks/Spy_games-solution.ipynb
@@ -64,7 +64,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -104,6 +106,38 @@
     "print(sample_message)\n",
     "\n",
     "#Code ends here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a sample message.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "file_path = \"../data/Sample.txt\"\n",
+    "\n",
+    "def read_file(path):\n",
+    "    file = open(path, 'r')\n",
+    "    sentence = file.readline()\n",
+    "    \n",
+    "    \n",
+    "    file.close()\n",
+    "    \n",
+    "    return sentence\n",
+    "    \n",
+    "sample_msg = read_file(file_path)\n",
+    "\n",
+    "print(sample_msg)"
    ]
   },
   {
@@ -363,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
