--- a/Day_3_spy_games_dataset/notebooks/Spy_games.ipynb
+++ b/Day_3_spy_games_dataset/notebooks/Spy_games.ipynb
@@ -63,14 +63,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a sample message.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
     "##File path for the file \n",
-    "file_path='../data/Sample.txt'\n"
+    "file_path='../data/Sample.txt'\n",
+    "\n",
+    "def read_file(path):\n",
+    "    file = open(path, 'r')\n",
+    "    sentence = file.readline()\n",
+    "    \n",
+    "    #print (type(file))\n",
+    "    file.close()\n",
+    "    \n",
+    "    return sentence\n",
+    "\n",
+    "returnedSentnc = read_file(file_path)\n",
+    "\n",
+    "print(returnedSentnc)\n",
+    "\n",
+    "    \n"
    ]
   },
   {
@@ -127,12 +150,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "\n",
     "file_path_1 = '../data/M1.txt'\n",
-    "file_path_2 = '../data/M2.txt'\n"
+    "file_path_2 = '../data/M2.txt'\n",
+    "\n",
+    "#message_1 = read_file(file_path_1)\n",
+    "#message_1 = read_file(file_path_2)\n",
+    "\n",
+    "def fuse_msg(a, b):\n",
+    "    \n",
+    "    mval1 = int(a)\n",
+    "    \n",
+    "    \n",
+    "    mval2 = int(b)\n",
+    "    \n",
+    "    return str(mval2//mval1)\n",
+    "\n",
+    "message_1 = read_file(file_path_1)\n",
+    "message_2 = read_file(file_path_2)\n",
+    "\n",
+    "secret_msg_1 = fuse_msg(message_1,message_2)\n",
+    "print (secret_msg_1)\n",
+    "\n"
    ]
   },
   {
@@ -186,11 +238,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Green\n",
+      "Data Scientist\n"
+     ]
+    }
+   ],
    "source": [
-    "file_path_3 = '../data/M3.txt'\n"
+    "file_path_3 = '../data/M3.txt'\n",
+    "\n",
+    "message_3 = read_file(file_path_3)\n",
+    "print (message_3)\n",
+    "\n",
+    "def substitute_msg(message_c):\n",
+    "    if message_c == \"Red\":\n",
+    "        sub = 'Army General'\n",
+    "    elif message_c == \"Green\":\n",
+    "        sub = 'Data Scientist'\n",
+    "    elif message_c == \"Blue\":\n",
+    "        sub = 'Marine Biologist'\n",
+    "                \n",
+    "    return(sub)\n",
+    "\n",
+    "secret_msg_2 = substitute_msg(message_3)\n",
+    "print(secret_msg_2)\n",
+    "\n"
    ]
   },
   {
@@ -263,13 +341,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you are now\n"
+     ]
+    }
+   ],
    "source": [
     "# File path for message 4  and message 5\n",
     "file_path_4 = '../data/M4.txt'\n",
-    "file_path_5 = '../data/M5.txt'\n"
+    "file_path_5 = '../data/M5.txt'\n",
+    "\n",
+    "message_4 = read_file(file_path_4)\n",
+    "message_5 = read_file(file_path_5)\n",
+    "\n",
+    "def compare_msg(message_d, message_e):\n",
+    "    \n",
+    "    a_list = message_d.split()\n",
+    "    b_list = message_e.split()\n",
+    "    \n",
+    "    c_list = [word for word in a_list if word not in b_list]\n",
+    "    \n",
+    "    final_msg=\" \".join(c_list)\n",
+    "    \n",
+    "    return(final_msg)\n",
+    "    \n",
+    "\n",
+    "secret_msg_3 = compare_msg(message_4, message_5)\n",
+    "print (secret_msg_3)\n",
+    "\n",
+    "    \n"
    ]
   },
   {
@@ -324,11 +430,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step closer to become\n"
+     ]
+    }
+   ],
    "source": [
-    "file_path_6 = '../data/M6.txt'\n"
+    "file_path_6 = '../data/M6.txt'\n",
+    "\n",
+    "message_6 = read_file(file_path_6)\n",
+    "#print (message_6)\n",
+    "\n",
+    "def extract_msg(message_f):\n",
+    "    a_list = message_f.split()\n",
+    "    \n",
+    "    even_word=lambda x: (len(x)%2==0)\n",
+    "    \n",
+    "    b_list=(filter(even_word, a_list))\n",
+    "    \n",
+    "    final_msg=\" \".join(b_list)\n",
+    "    \n",
+    "    return final_msg\n",
+    "    \n",
+    "\n",
+    "secret_msg_4 = extract_msg(message_6)\n",
+    "print (secret_msg_4)\n"
    ]
   },
   {
@@ -383,16 +515,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you are now 1 step closer to become Data Scientist\n"
+     ]
+    }
+   ],
    "source": [
-    "#Secret message parts in the correct order\n",
     "message_parts=[secret_msg_3, secret_msg_1, secret_msg_4, secret_msg_2]\n",
     "\n",
     "\n",
-    "final_path= '../data/secret_message.txt'\n"
+    "final_path= '../data/secret_message.txt'\n",
+    "\n",
+    "secret_msg=\" \".join(message_parts)\n",
+    "\n",
+    "\n",
+    "def write_file(secret_msg,path):\n",
+    "       \n",
+    "\n",
+    "    file = open(path, 'a+')\n",
+    "\n",
+    "\n",
+    "    file.write(secret_msg)\n",
+    "\n",
+    "\n",
+    "    file.close()\n",
+    "\n",
+    "\n",
+    "write_file(secret_msg, final_path)\n",
+    "\n",
+    "\n",
+    "print(secret_msg)\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['you are now', '1', 'step closer to become', 'Data Scientist']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "message_parts=[secret_msg_3, secret_msg_1, secret_msg_4, secret_msg_2]\n",
+    "\n",
+    "print (message_parts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -418,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
